--- a/client/index.html
+++ b/client/index.html
@@ -12,42 +12,99 @@
             <div class="progress-bar"></div>
         </div>
 
-        <section class="question-section">
-            <div class="question-content">
-                <h2>반가워요! 당신의 이름은 무엇인가요?</h2>
-                <input type="text" placeholder="이름을 입력해주세요" class="text-input">
-                <div class="navigation-buttons">
-                    <button class="next-btn">다음</button>
-                </div>
+        <section class="question-section" data-question="user_name">
+            <h2>당신의 이름은 무엇인가요?</h2>
+            <input type="text" placeholder="이름을 입력해주세요" class="text-input">
+            <div class="navigation-buttons">
+                <button class="next-btn">다음</button>
             </div>
         </section>
 
-        <section class="question-section">
-            <div class="question-content">
-                <h2>이번 프로젝트에 참여하시겠어요?</h2>
-                <div class="choice-buttons">
-                    <button class="choice-btn">O (참여할래요!) </button>
-                    <button class="choice-btn">X (고민해볼래요.)</button>
-                </div>
-                <div class="navigation-buttons">
-                    <button class="prev-btn">이전</button>
-                    <button class="next-btn">다음</button>
-                </div>
+        <section class="question-section" data-question="gender">
+            <h2>성별을 선택해주세요.</h2>
+            <div class="choice-buttons">
+                <button class="choice-btn" data-value="male">남성</button>
+                <button class="choice-btn" data-value="female">여성</button>
+            </div>
+            <div class="navigation-buttons">
+                <button class="prev-btn">이전</button>
+                <button class="next-btn">다음</button>
             </div>
         </section>
-        
-        <section class="question-section">
+
+        <section class="question-section" data-question="birth_year">
+            <h2>출생연도를 선택해주세요.</h2>
+            <select class="select-box">
+                <option value="">선택</option>
+                <option value="2005">2005년</option>
+                <option value="2004">2004년</option>
+                <option value="2003">2003년</option>
+                <option value="1980">1980년</option>
+            </select>
+            <div class="navigation-buttons">
+                <button class="prev-btn">이전</button>
+                <button class="next-btn">다음</button>
+            </div>
+        </section>
+
+        <section class="question-section" data-question="contact">
+            <h2>연락처를 알려주세요.</h2>
+            <input type="tel" placeholder="'-' 없이 숫자만 입력" class="text-input">
+            <div class="navigation-buttons">
+                <button class="prev-btn">이전</button>
+                <button class="next-btn">다음</button>
+            </div>
+        </section>
+
+        <section class="question-section" data-question="fan_photo">
+            <h2>FC서울 팬 인증 사진을 첨부해주세요.</h2>
+            <input type="file" id="file-upload" class="file-input" accept="image/*">
+            <label for="file-upload" class="file-label">사진 선택하기</label>
+            <div class="navigation-buttons">
+                <button class="prev-btn">이전</button>
+                <button class="next-btn">다음</button>
+            </div>
+        </section>
+
+        <section class="question-section" data-question="seat_choice">
+            <h2>원하는 좌석 구역을 선택해주세요.</h2>
+            <div class="choice-buttons">
+                <button class="choice-btn" data-value="N">N석 (응원석)</button>
+                <button class="choice-btn" data-value="E">E석 (본부석 맞은편)</button>
+                <button class="choice-btn" data-value="W">W석 (본부석)</button>
+            </div>
+            <div class="navigation-buttons">
+                <button class="prev-btn">이전</button>
+                <button class="next-btn">다음</button>
+            </div>
+        </section>
+
+        <section class="question-section" data-question="agreement">
+            <h2>아래 주의사항을 확인하셨나요?</h2>
+            <div class="agreement-box">
+                <p>본 이벤트는 FC서울 팬들을 위한 이벤트입니다. 입장 시 팬 인증을 요청할 수 있으며, 어웨이팀 유니폼 착용 시 입장이 제한될 수 있습니다.</p>
+            </div>
+            <div class="checkbox-container">
+                <input type="checkbox" id="agree-checkbox" class="checkbox-input">
+                <label for="agree-checkbox" class="checkbox-label">네, 확인했습니다.</label>
+            </div>
+            <div class="navigation-buttons">
+                <button class="prev-btn">이전</button>
+                <button class="submit-btn">최종 제출하기</button>
+            </div>
+        </section>
+
+        <section class="question-section" data-question="thank_you">
             <div class="question-content">
-                <h2>당신을 가장 잘 나타내는 사진을 첨부해주세요.</h2>
-                <input type="file" id="file-upload" class="file-input" accept="image/*">
-                <label for="file-upload" class="file-label">파일 선택하기</label>
-                <div class="navigation-buttons">
-                    <button class="prev-btn">이전</button>
-                    <button class="submit-btn">제출하기</button>
-                </div>
+                <h2>제출 완료!</h2>
+                <p style="font-size: 1.2rem; line-height: 1.6;">
+                    신청해주셔서 감사합니다.<br>
+                    자세한 내용은 기입하신 연락처로 안내될 예정입니다.
+                </p>
             </div>
         </section>
 
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
