feat: 파일 업로드 기능 및 관리자 페이지 구현
프로젝트의 핵심 기능인 파일(이미지) 업로드 시스템을 완성하고, 제출된 데이터를 관리할 수 있는 관리자 페이지를 추가합니다.

[Cloud Storage 연동]
- 로컬 파일 저장 방식에서 GCP Cloud Storage 연동 방식으로 변경
- 서비스 계정을 이용한 서버 인증 및 파일 업로드 로직 구현
- DB에는 파일의 공개 URL을 저장하여 효율성 및 확장성 확보

[관리자 페이지]
- GET /api/applications, /api/export_csv API 엔드포인트 추가
- 제출된 모든 신청 내역을 조회하고 CSV 파일로 다운로드하는 기능 구현
- 각 신청 건의 상세 정보(이미지 포함)를 확인할 수 있는 모달 UI 추가

--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,7 @@
 
         <section class="question-section" data-question="fan_photo">
             <h2>FC서울 팬 인증 사진을 첨부해주세요.</h2>
+            <img id="image-preview" src="#" alt="이미지 미리보기" class="image-preview">
             <input type="file" id="file-upload" class="file-input" accept="image/*">
             <label for="file-upload" class="file-label">사진 선택하기</label>
             <div class="navigation-buttons">
